🐛 FIX: download buttons alignement

--- a/landing/components/DownloadButtons.module.scss
+++ b/landing/components/DownloadButtons.module.scss
@@ -4,10 +4,14 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  width: 225px;
+  width: 480px;
 
   &.min {
     width: 150px;
+
+    button {
+      width: 100%;
+    }
   }
 
   button {
@@ -22,7 +26,7 @@
     font-weight: 400;
     transition: 0.3s all;
 
-    width: 100%;
+    width: 45%;
 
     > span {
       margin-right: 5px !important;
